  line by specifying an empty path
- Video changes:
  - Increase max allowed VDI resolution from 1280x960 to 1920x1200
  - Revert preferred Videl resolution max zooming size setting from
    host desktop resolution back to 832x576 it was in Hatari v1.4,
    so that Falcon/TT emulation window sizes by default are closer
    to ST/STE ones on larger resolution monitors
  - Fix statusbar assert
- WinUAE core specific changes:
  - Default to Falcon with WinUAE core (old CPU core still defaults to ST)
  - Support run-time changing of CPU level, FPU type and machine type
    from the GUI (also) with WinUAE CPU core
- Debugging improvements:
  - Fix to debugger CPU cycle profiling modifying CPU state
  - Profiling info is shown at end of disassembly lines
  - Support for tracing all symbols loaded to the debugger,
    this can be used to get function traces for both CPU and DSP
  - Show args for all Bios and most XBios & Gemdos calls when tracing
  - "info" command can output opcode tables for BIOS & XBIOS too
  - More info to FDC, IKBD, Videl and Crossbar traces

Other changes:
- Hatari OSX UI updated for Hatari v1.6.1 changes
- Hatari Python UI supports file paths with spaces in them and spaces in
  Hatari options given through its control socket can be quoted with '\'.
- Support for alpha-numeric characters in Hconsole "text" command
- Fixes to Hatari UI and hconsole error handling and examples
- Fixed hatari-local-midi-ring.sh & hatari-local-rs232.sh arg handling
- zip2st removes intermediate directories from created floppy
- Fixed hmsa to handle files with multiple "." characters in their names
- TOS tester testing covers more GEMDOS functionality, works with
  all Hatari supported TOS versions and HW configurations and it's
  fully automated 

Fixed Games :
  Hammerfist (fire button),
  Automation 168 - Operation Clean Streets (prefetch in the CPU emulation)
  Impossible Mission II (some versions had the same prefetch issue in the CPU)
  Hades Nebula (fire button)